--- a/euajudo/Base.lproj/Main.storyboard
+++ b/euajudo/Base.lproj/Main.storyboard
@@ -142,48 +142,73 @@
             </objects>
             <point key="canvasLocation" x="1084" y="694"/>
         </scene>
-        <!--Root View Controller-->
-        <scene sceneID="KFa-dT-kHp">
-            <objects>
-                <tableViewController id="PSS-Yf-c2E" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="2ts-wM-GyS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3GU-cv-YCI">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3GU-cv-YCI" id="Qjl-eb-U9n">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="PSS-Yf-c2E" id="vHF-GK-VRA"/>
-                            <outlet property="delegate" destination="PSS-Yf-c2E" id="dHh-qy-bMr"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="mwv-Np-KaD"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0YX-7e-jno" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1084" y="1565"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="QUr-y4-EK8">
             <objects>
-                <navigationController id="R8G-Ba-9oZ" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="Donate" id="R8G-Ba-9oZ" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="H7K-mn-UxP">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="PSS-Yf-c2E" kind="relationship" relationship="rootViewController" id="Wc0-mi-mYv"/>
+                        <segue destination="4PO-gV-Vmc" kind="relationship" relationship="rootViewController" id="Rp9-pP-Woh"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H5V-ky-SEL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="293" y="1565"/>
+        </scene>
+        <!--Donate View Controller-->
+        <scene sceneID="KvV-M7-lcV">
+            <objects>
+                <viewController id="4PO-gV-Vmc" customClass="DonateViewController" customModule="euajudo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="f8m-0P-1oy"/>
+                        <viewControllerLayoutGuide type="bottom" id="bzB-Oo-5sQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fCx-Wi-UPy">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="R$" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7MX-j0-ADp">
+                                <rect key="frame" x="168" y="94" width="264" height="131"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="264" id="JbB-Al-Y9y"/>
+                                    <constraint firstAttribute="height" constant="131" id="iTh-Yz-zX5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="100"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qW5-Qg-mHh">
+                                <rect key="frame" x="276" y="285" width="49" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="bO7-gc-oBb"/>
+                                    <constraint firstAttribute="width" constant="49" id="p1r-FI-eq0"/>
+                                </constraints>
+                                <state key="normal" title="Ajudar!">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7MX-j0-ADp" firstAttribute="top" secondItem="f8m-0P-1oy" secondAttribute="bottom" constant="30" id="LCK-Un-EE3"/>
+                            <constraint firstItem="qW5-Qg-mHh" firstAttribute="top" secondItem="7MX-j0-ADp" secondAttribute="bottom" constant="60" id="sLT-oW-wFV"/>
+                            <constraint firstAttribute="centerX" secondItem="7MX-j0-ADp" secondAttribute="centerX" id="sZc-da-mkD"/>
+                            <constraint firstAttribute="centerX" secondItem="qW5-Qg-mHh" secondAttribute="centerX" id="zns-XS-w4J"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="BF5-8t-VaW">
+                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="R3N-cW-kc1">
+                            <connections>
+                                <action selector="buttonClosePressed:" destination="4PO-gV-Vmc" id="Ji2-8K-3fe"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Mn-51-EIs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1084" y="1565"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8NF-W6-rU4">
