--- a/euajudo/Base.lproj/Main.storyboard
+++ b/euajudo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zIj-7g-0Lf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5pH-p3-k4u">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -274,13 +274,7 @@
                             <outlet property="delegate" destination="B53-zg-BOU" id="7ak-Be-khb"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Login" id="LZ6-S4-I3i">
-                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="AId-Gx-L24">
-                            <connections>
-                                <action selector="close:" destination="B53-zg-BOU" id="JZz-mN-gJL"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Login" id="LZ6-S4-I3i"/>
                     <connections>
                         <outlet property="email" destination="fYg-wR-047" id="2Tb-NR-ug6"/>
                         <outlet property="password" destination="Rhy-3C-scf" id="BVG-Pc-BEz"/>
@@ -288,7 +282,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uNY-1L-xV6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="379" y="-398"/>
+            <point key="canvasLocation" x="135" y="-416"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8NF-W6-rU4">
@@ -410,13 +404,7 @@
                             <outlet property="delegate" destination="ewQ-qy-rX4" id="O7K-pO-AwX"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Cadastre-se" id="LuM-Jn-NLH">
-                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="hJd-Z5-mXE">
-                            <connections>
-                                <action selector="close:" destination="ewQ-qy-rX4" id="MzX-hX-pUe"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Cadastre-se" id="LuM-Jn-NLH"/>
                     <connections>
                         <outlet property="email" destination="ejl-4b-Wzd" id="Ry0-F3-YsD"/>
                         <outlet property="name" destination="ZYp-Ds-9J1" id="hez-vx-zGa"/>
@@ -426,43 +414,110 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TzI-o6-FFg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="379" y="-1134"/>
+            <point key="canvasLocation" x="135" y="-1152"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="JSz-0F-rMe">
+            <objects>
+                <viewController id="jNZ-CK-k9x" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6Vn-10-i5u"/>
+                        <viewControllerLayoutGuide type="bottom" id="vnm-z0-5cE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="i5k-tW-Poa">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fhe-bk-5Q1">
+                                <rect key="frame" x="15" y="140" width="570" height="60"/>
+                                <color key="backgroundColor" red="1" green="0.30588235294117649" blue="0.41568627450980394" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="X62-9b-IlE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Já tenho uma conta">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="B53-zg-BOU" kind="show" id="70O-UI-tMp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PLB-BP-3Gv">
+                                <rect key="frame" x="15" y="550" width="570" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="fKw-kP-HW9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                <state key="normal" title="Criar conta">
+                                    <color key="titleColor" red="1" green="0.30588235289999999" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="ewQ-qy-rX4" kind="show" id="wXg-oe-xCu"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Es6-Rs-aCl">
+                                <rect key="frame" x="15" y="72" width="570" height="60"/>
+                                <color key="backgroundColor" red="0.25098039215686274" green="0.36862745098039218" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Luw-gi-m3h"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Entrar com o Facebook">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Es6-Rs-aCl" firstAttribute="top" secondItem="6Vn-10-i5u" secondAttribute="bottom" constant="8" id="6mZ-2U-fKx"/>
+                            <constraint firstAttribute="trailing" secondItem="Es6-Rs-aCl" secondAttribute="trailing" constant="15" id="EmX-0f-tU7"/>
+                            <constraint firstItem="Es6-Rs-aCl" firstAttribute="leading" secondItem="i5k-tW-Poa" secondAttribute="leading" constant="15" id="NyX-cN-bju"/>
+                            <constraint firstItem="Fhe-bk-5Q1" firstAttribute="top" secondItem="Es6-Rs-aCl" secondAttribute="bottom" constant="8" id="Y12-MF-sQC"/>
+                            <constraint firstItem="PLB-BP-3Gv" firstAttribute="leading" secondItem="i5k-tW-Poa" secondAttribute="leading" constant="15" id="a1J-3v-Q5a"/>
+                            <constraint firstItem="vnm-z0-5cE" firstAttribute="top" secondItem="PLB-BP-3Gv" secondAttribute="bottom" constant="20" id="fph-bs-67y"/>
+                            <constraint firstAttribute="trailing" secondItem="PLB-BP-3Gv" secondAttribute="trailing" constant="15" id="h5v-vM-T0l"/>
+                            <constraint firstAttribute="trailing" secondItem="Fhe-bk-5Q1" secondAttribute="trailing" constant="15" id="jDn-aL-wGr"/>
+                            <constraint firstItem="Fhe-bk-5Q1" firstAttribute="leading" secondItem="i5k-tW-Poa" secondAttribute="leading" constant="15" id="jNw-qF-AYs"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="sxZ-qd-DRp">
+                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="pmM-v4-vIR"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hBF-ah-9ld" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-817" y="-784"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="9vj-ok-Dhs">
+        <scene sceneID="RC4-Mz-YfF">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tVy-jq-Pfa" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5pH-p3-k4u" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="e4N-5t-mV1">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ipo-BT-nb5">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="B53-zg-BOU" kind="relationship" relationship="rootViewController" id="Nnk-qa-hXo"/>
+                        <segue destination="jNZ-CK-k9x" kind="relationship" relationship="rootViewController" id="I5C-2v-hhB"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Doa-X1-Tsb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="59R-9U-M7O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-433" y="-398"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="QaG-sw-umN">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zIj-7g-0Lf" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nxn-in-fam">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="ewQ-qy-rX4" kind="relationship" relationship="rootViewController" id="SaT-VS-OJB"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6La-yk-hzV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-433" y="-1134"/>
+            <point key="canvasLocation" x="-1629" y="-784"/>
         </scene>
     </scenes>
     <resources>
