--- a/euajudo/Base.lproj/Main.storyboard
+++ b/euajudo/Base.lproj/Main.storyboard
@@ -179,8 +179,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qW5-Qg-mHh">
-                                <rect key="frame" x="276" y="285" width="49" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qW5-Qg-mHh">
+                                <rect key="frame" x="276" y="518" width="49" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="bO7-gc-oBb"/>
                                     <constraint firstAttribute="width" constant="49" id="p1r-FI-eq0"/>
@@ -188,6 +188,27 @@
                                 <state key="normal" title="Ajudar!">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonPaymentPressed:" destination="4PO-gV-Vmc" eventType="touchUpInside" id="mHH-iH-3hs"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Azq-nI-Jcp">
+                                <rect key="frame" x="75" y="376" width="141" height="30"/>
+                                <state key="normal" title="Ajudar mensalmente">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonPaymentMonthlyPressed:" destination="4PO-gV-Vmc" eventType="touchUpInside" id="Q9l-or-0Co"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QDe-Nv-XnI">
+                                <rect key="frame" x="75" y="414" width="147" height="30"/>
+                                <state key="normal" title="Ajudar uma única vez">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonPaymentOncePressed:" destination="4PO-gV-Vmc" eventType="touchUpInside" id="z1o-CW-duW"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -205,10 +226,33 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="buttonPaymentMonthly" destination="Azq-nI-Jcp" id="6kv-7P-S5T"/>
+                        <outlet property="buttonPaymentOnce" destination="QDe-Nv-XnI" id="bqq-Ao-JgY"/>
+                        <segue destination="CQd-I0-Jvv" kind="show" identifier="Payment" id="RUj-7u-TYh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Mn-51-EIs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1084" y="1565"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Nmp-HC-vh0">
+            <objects>
+                <viewController id="CQd-I0-Jvv" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5K9-PS-NYU"/>
+                        <viewControllerLayoutGuide type="bottom" id="0vx-1z-Tbj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cPa-kD-bDg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JbB-ka-Cxi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1894" y="1565"/>
         </scene>
         <!--Base Navigation Controller-->
         <scene sceneID="8NF-W6-rU4">
